--- a/Services.html
+++ b/Services.html
@@ -8,7 +8,7 @@
 <link rel="icon" href="./image/icon.png">
 <link rel="stylesheet" href="main.css" type="text/css" />
 <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-<!--- <title></title> --->
+<!--- <title>Academic Services</title> --->
 <title>欢迎来到香港科技大学（广州）安全与智能信息物理系统实验室！</title>
 <!-- MathJax -->
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML' async>
@@ -52,50 +52,69 @@ MathJax.Hub.Config({
 </div> <!-- <div id="layout-menu-container"> -->
 <div id="layout-content-container">
 <div id="layout-content">
-<h1>研究经费 Research Grants</h1>
+<div id="toptitle">
+<h1>Academic Services</h1>
+</div>
+<h2>Conference Program Committee and Editorial</h2>
 <ul>
-<li><p><b>面向信息物理系统的大语言模型可控策略生成研究</b>，广州市基础与应用基础研究项目<br />
-主持(PI), Grant No:2025A03J4493，2025.01-2026.12, 250k RMB</p>
+<li><p><a href="https://ieee-itsc.org/2024/" target=&ldquo;blank&rdquo;>27th IEEE International Conference on Intelligent Transportation Systems</a>, 2024</p>
 </li>
-<li><p><b>AI推理结果的自动化质量评价机制研究</b>，香港科技大学（广州）-蜂助手AI与IOT智核联合实验室子项目<br />
-主持(PI),2024.12-2025.10, 450k RMB</p>
+<li><p><a href="https://aaai.org/aaai-conference/" target=&ldquo;blank&rdquo;>Annual AAAI Conference on Artificial Intelligence, Special Track on Safe, Robust and Responsible AI</a>, from 2023</p>
 </li>
-<li><p><b>融合学科下数学学科教学实践探索——以《人工智能中的数学》课程教学为例</b>，港科广实践项目（萌芽项目）<br />
-主持(PI), Grant No: HKUST(GZ)-ROP2025044, 2025.04-2026.04, 20K RMB</p>
+<li><p><a href="https://hscc.acm.org/2023/" target=&ldquo;blank&rdquo;>ACM International Conference on Hybrid Systems: Computation and Control (Repeatability Evaluation)</a>, from 2023</p>
 </li>
-<li><p><b>广州市人工智能前沿交叉科学重点实验室</b>, 基础研究计划-市重点实验室建设项目<br /> 
-参与（Participating）,Grant No:2023A03J0008; 2023.04-2025.03, 3M RMB</p>
+<li><p><a href="https://iccps.acm.org/2022/" target=&ldquo;blank&rdquo;>ACM/IEEE International Conference on Cyber-Physical Systems (Artifact Evaluation)</a>, 2022 </p>
 </li>
 </ul>
-<h1>部分项目简介 Selected Research Projects</h1>
-<div id="text-img-container"><div id="img-container">
-<img src="./image/SSVA_cover.jpg" alt="" width="300px" /></div>
-<div id="text-container"><h2><a href="./Sva.html" target=&ldquo;blank&rdquo;>Safe-sec-visor Architecture for Cyber-Physical Systems</a></h2>
-<h3>Make AI trustworthy in CPS through sandboxing </h3>
-<p><br />
-In this project, we propose a Safe-sec-visor Architecture for sandboxing arbitary types of unverified controllers (e.g., AI-based controllers) to provide a system-level safety and security guarantees for Cyber-Physical Systems.</p>
-</div></div>
-<div id="text-img-container"><div id="img-container">
-<img src="./image/SbC_Concept.jpg" alt="" width="300px" /></div>
-<div id="text-container"><h2><a href="./SbC.html" target=&ldquo;blank&rdquo;>Secure-by-construction Controller Synthesis</a></h2>
-<h3>Constructing safe and secure Cyber-Physical Systems</h3>
-<p><br />
-In this project, we focus on provably-correct synthesis scheme for building controllers that ensure safety and security properties over Cyber-Physical Systems simultaneously.</p>
-</div></div>
-<div id="text-img-container"><div id="img-container">
-<img src="./image/correctbyconstruction.png" alt="" width="300px" /></div>
-<div id="text-container"><h2><a href="./MDBSys.html" target=&ldquo;blank&rdquo;>Model-based Controller Synthesis</a></h2>
-<h3>Towards correct-by-construction embedded controllers</h3>
-<p><br />
-In this project, we investigate both abstraction-based and abstraction-free approaches for synthesizing correct-by-construction controllers against high-level logical properties, such as \(\omega\)-regular properties, over systems with continuous state and input sets.</p>
-</div></div>
-<div id="text-img-container"><div id="img-container">
-<img src="./image/dt_cover.png" alt="" width="300px" /></div>
-<div id="text-container"><h2><a href="./DATASys.html" target=&ldquo;blank&rdquo;>Data-driven Controller Synthesis</a></h2>
-<h3>Achieve formal safety guarantees from data</h3>
-<p><br />
-In this project, we investigate how to synthesize correct-by-construction controllers directly based on data collected from the black-box systems with continuous state and input sets.</p>
-</div></div>
+<h2>Journal Reviewer</h2>
+<ul>
+<li><p><a href="http://ieeecss.org/publication/transactions-automatic-control/" target=&ldquo;blank&rdquo;>IEEE Transactions on Automatic Control (TAC)</a></p>
+</li>
+<li><p><a href="https://www.sciencedirect.com/journal/nonlinear-analysis-hybrid-systems/" target=&ldquo;blank&rdquo;>Nonlinear Analysis: Hybrid Systems (NAHS)</a></p>
+</li>
+<li><p><a href="http://ieee-cssletters.dei.unipd.it/" target=&ldquo;blank&rdquo;>IEEE Control Systems Letters (L-CSS)</a> <b>(Outstanding Reviewer Award)</b> <a href=".\image\doc\OR_LCSS.pdf" target=&ldquo;blank&rdquo;>[see Award Letter]</a></p>
+</li>
+<li><p><a href="http://ijece.iaescore.com/index.php/IJECE/" target=&ldquo;blank&rdquo;>International Journal of Electrical and Computer Engineering (IJECE)</a></p>
+</li>
+<li><p><a href="https://ieee-ceda.org/publication/ieee-embedded-systems-letters-esl" target=&ldquo;blank&rdquo;>IEEE Embedded Systems Letters (ESL)</a></p>
+</li>
+<li><p><a href="https://www.ieeesmc.org/publications/transactions-on-smc-systems/" target=&ldquo;blank&rdquo;>IEEE Transactions on Systems, Man and Cybernetics: Systems</a></p>
+</li>
+<li><p><a href="https://www.sciencedirect.com/journal/annual-reviews-in-control" target=&ldquo;blank&rdquo;>Annual Reviews in Control (ARC)</a></p>
+</li>
+</ul>
+<h2>Conference Reviewer</h2>
+<ul>
+<li><p>IEEE Conference on Decision and Control (CDC)</p>
+</li>
+<li><p>American Control Conference (ACC)</p>
+</li>
+<li><p>European Control Conference (ECC)</p>
+</li>
+<li><p>ACM/IEEE International Conference on Cyber-Physical Systems (ICCPS)</p>
+</li>
+<li><p>ACM International Conference on Hybrid Systems: Computation and Control (HSCC)</p>
+</li>
+<li><p>IEEE Real-Time Systems Symposium (RTSS)</p>
+</li>
+<li><p>Annual Learning for Dynamics &amp; Control Conference (L4DC)</p>
+</li>
+<li><p>IEEE Conference on Control Technology and Applications (CCTA)</p>
+</li>
+<li><p>Annual AAAI Conference on Artificial Intelligence (AAAI)</p>
+</li>
+<li><p>IEEE International Conference on Intelligent Transportation Systems (ITSC)</p>
+</li>
+</ul>
+<h2>Professional Membership</h2>
+<ul>
+<li><p><a href="https://aaai.org/" target=&ldquo;blank&rdquo;>Association for the Advancement of Artificial Intelligence (AAAI)</a></p>
+</li>
+<li><p><a href="https://ieeecss.org/" target=&ldquo;blank&rdquo;>Institute for Electrical and Electronics Engineers (IEEE): Control Systems Society (CSS)</a></p>
+</li>
+<li><p><a href="https://ieeecss.org/tc/hybrid-systems" target=&ldquo;blank&rdquo;>IEEE CSS Technical Committee on Hybrid Systems</a></p>
+</li>
+</ul>
 </div> <!-- <div id="layout-content"> -->
 <div id="footer-container">
 <div id="footer">
