--- a/group.html
+++ b/group.html
@@ -231,31 +231,61 @@ MPhil 2024</br>
 <div id="member">
 <img src="image/member/PG/HouWenke.jpg">
 <p>
-<b>侯文科 Wenke Hou</b></br>
+<b>侯文科 Wenke Hou</b></br></br>
 红鸟硕士四期 </br>
 MPhil 2025</br>
 <b>研究主题</b></br>
-情感陪伴机器人
+迁移学习
 </p>
 </div> 
 <div id="member">
 <img src="image/member/PG/LiuShuwen.jpg">
 <p>
-<b>刘淑雯 Shuwen Liu</b></br>
+<b>刘淑雯 Shuwen Liu</b></br></br>
 红鸟硕士四期 </br>
 MPhil 2025</br>
 <b>研究主题</b></br>
-情感陪伴机器人
+人机交互与情感表达
 </p>
 </div> 
 <div id="member">
 <img src="image/member/PG/LuZihan.jpg">
 <p>
-<b>芦子含 Zihan Lu</b></br>
+<b>芦子含 Zihan Lu</b></br></br>
 红鸟硕士四期 </br>
 MPhil 2025</br>
 <b>研究主题</b></br>
-情感陪伴机器人
+人机交互与情绪识别
+</p>
+</div> 
+<div id="member">
+<img src="image/member/PG/DongFangting.png">
+<p>
+<b>董方婷 Fangting Dong</b></br>
+红鸟硕士四期 </br>
+MPhil 2025</br>
+<b>研究主题</b></br>
+大模型长短记忆机制
+</p>
+</div> 
+<div id="member">
+<img src="image/member/PG/ZhuChenyuan.jpg">
+<p>
+<b>朱晨媛 Chenyuan Zhu</b></br>
+红鸟硕士四期 </br>
+MPhil 2025</br>
+<b>研究主题</b></br>
+多智能体
+</p>
+</div> 
+<div id="member">
+<img src="image/member/PG/LiuRui.jpg">
+<p>
+<b>刘睿 Rui Liu</b></br></br>
+红鸟硕士四期 </br>
+MPhil 2025</br>
+<b>研究主题</b></br>
+端边云大模型部署
 </p>
 </div> 
 </div>   
@@ -441,7 +471,7 @@ MPhil 2025</br>
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Last edited  on November 5<sup>th</sup> 2025 . </br>
+Last edited  on December 25<sup>th</sup> 2025 . </br>
 Powered by <a href="https://github.com/szl2/jemdoc-new-design" target="blank">jemdoc + new design</a>.
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
