--- a/index.html
+++ b/index.html
@@ -63,22 +63,16 @@ The research directions of the laboratory include (but are not limited to):</p>
 </li>
 <li><p>Verification and Control of Cyber-Physical Systems.</p>
 </li>
-<li><p>AI + Low-altitude Economy.</p>
-</li>
-<li><p>AI + Ocean Engineering.</p>
-</li>
-<li><p>AI + Education.</p>
+<li><p>AI + (Low-altitude Economy, Ocean Engineering, Education, Smart Manufacturing)</p>
 </li>
 </ol>
 <p><b>Please check <a href="./Recruitment.html" target=&ldquo;blank&rdquo;>here</a> if you want to apply for Ph.D. and Postdoc positions in our lab.</b></p>
 <h2>Principle Investigator</h2>
 <div id="text-img-container"><div id="img-container">
-<img src="./image/bingzhuo.jpg" alt="Bingzhuo Zhong" width="220px" height="220px" /></div>
-<div id="text-container"><h2><a href="https://personal.hkust-gz.edu.cn/zhongbingzhuo/" target=&ldquo;blank&rdquo;>Bingzhuo Zhong</a>, Dr. rer. nat. (钟秉灼)</h2>
-<h2><b>Assistant Professor</b> </h2>
-<h3><a href="https://www.hkust-gz.edu.cn/academics/hubs-and-thrust-areas/information-hub/artificial-intelligence/" target=&ldquo;blank&rdquo;>Thrust of Artificial Intelligence</a>, <a href="https://www.hkust-gz.edu.cn/academics/hubs-and-thrust-areas/information-hub/" target=&ldquo;blank&rdquo;>Information Hub</a></h3>
-<h3><a href="https://www.hkust-gz.edu.cn/academics/hubs-and-thrust-areas/systems-hub/intelligent-transportation/" target=&ldquo;blank&rdquo;>Thrust of Intelligent Transportation</a>, <a href="https://www.hkust-gz.edu.cn/academics/hubs-and-thrust-areas/systems-hub/" target=&ldquo;blank&rdquo;>System Hub</a></h3>
-<h3><a href="https://www.hkust-gz.edu.cn/" target=&ldquo;blank&rdquo;>Hong Kong University of Science and Technology (Guangzhou)</a></h3>
+<img src="./image/bingzhuo_new.jpg" alt="Bingzhuo Zhong" width="150px" height="225px" /></div>
+<div id="text-container"><h2><a href="https://personal.hkust-gz.edu.cn/zhongbingzhuo/index_Chinese.html" target=&ldquo;blank&rdquo;>Bingzhuo Zhong</a>, Dr. rer. nat. (钟秉灼)<br /><br /></h2>
+<h3>Assistant Professor, <a href="https://www.hkust-gz.edu.cn/academics/hubs-and-thrust-areas/information-hub/artificial-intelligence/" target=&ldquo;blank&rdquo;>Thrust of Artificial Intelligence</a>, <a href="https://www.hkust-gz.edu.cn/academics/hubs-and-thrust-areas/information-hub/" target=&ldquo;blank&rdquo;>Information Hub</a> and <a href="https://www.hkust-gz.edu.cn/academics/hubs-and-thrust-areas/systems-hub/intelligent-transportation/" target=&ldquo;blank&rdquo;>Thrust of Intelligent Transportation</a>, <a href="https://www.hkust-gz.edu.cn/academics/hubs-and-thrust-areas/systems-hub/" target=&ldquo;blank&rdquo;>System Hub</a>, at the <a href="https://www.hkust-gz.edu.cn/" target=&ldquo;blank&rdquo;>Hong Kong University of Science and Technology (Guangzhou)</a></h3>
+<p><br /></p>
 <h3>Office: W4(C8) L3 305</h3>
 <h3>Email: bingzhuoz(at)hkust-gz(dot)edu(dot)cn<br /></h3>
 </div></div>
@@ -89,7 +83,7 @@ The research directions of the laboratory include (but are not limited to):</p>
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Last edited  on November 5<sup>th</sup> 2025 . </br>
+Last edited  on December 25<sup>th</sup> 2025 . </br>
 Powered by <a href="https://github.com/szl2/jemdoc-new-design" target="blank">jemdoc + new design</a>.
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
