--- a/Teaching.html
+++ b/Teaching.html
@@ -8,7 +8,7 @@
 <link rel="icon" href="./image/icon.png">
 <link rel="stylesheet" href="main.css" type="text/css" />
 <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-<!--- <title></title> --->
+<!--- <title>Teaching</title> --->
 <title>欢迎来到香港科技大学（广州）安全与智能信息物理系统实验室！</title>
 <!-- MathJax -->
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML' async>
@@ -52,49 +52,62 @@ MathJax.Hub.Config({
 </div> <!-- <div id="layout-menu-container"> -->
 <div id="layout-content-container">
 <div id="layout-content">
-<h1>研究经费 Research Grants</h1>
+<div id="toptitle">
+<h1>Teaching</h1>
+</div>
+<div class="infoblock">
+<div class="blockcontent">
+<p><b>Instructor</b>:</p>
 <ul>
-<li><p><b>面向信息物理系统的大语言模型可控策略生成研究</b>，广州市基础与应用基础研究项目<br />
-主持(PI), Grant No:2025A03J4493，2025.01-2026.12, 250k RMB</p>
+<li><p>Simplex: Fault-Tolerant Control Strategy for Real-Time Cyber-Physical Systems - Laboratory
+(<a href="https://campus.tum.de/tumonline/wbLv.wbShowLVDetail?pStpSpNr=950426326&amp;pSpracheNr=2&amp;pMUISuche=FALSE" target=&ldquo;blank&rdquo;>MW2491</a>), Technical University of Munich, Germany, since Summer Semester 2019 (new course)</p>
 </li>
-<li><p><b>AI推理结果的自动化质量评价机制研究</b>，香港科技大学（广州）-蜂助手AI与IOT智核联合实验室子项目<br />
-主持(PI),2024.12-2025.10, 450k RMB</p>
-</li>
-<li><p><b>融合学科下数学学科教学实践探索——以《人工智能中的数学》课程教学为例</b>，港科广实践项目（萌芽项目）<br />
-主持(PI), Grant No: HKUST(GZ)-ROP2025044, 2025.04-2026.04, 20K RMB</p>
-</li>
-<li><p><b>广州市人工智能前沿交叉科学重点实验室</b>, 基础研究计划-市重点实验室建设项目<br /> 
-参与（Participating）,Grant No:2023A03J0008; 2023.04-2025.03, 3M RMB</p>
+<li><p>Tutorial Concepts and Software Design for Cyber-Physical Systems (<a href="https://campus.tum.de/tumonline/pl/ui/$ctx;design=pl;header=max;lang=en/wbLv.wbShowLVDetail?pStpSpNr=950605509" target=&ldquo;blank&rdquo;>MW2411</a>), Technical University of Munich, Germany, since Summer Semester 2022</p>
 </li>
 </ul>
-<h1>部分项目简介 Selected Research Projects</h1>
-<div id="text-img-container"><div id="img-container">
-<img src="./image/SSVA_cover.jpg" alt="" width="300px" /></div>
-<div id="text-container"><h2><a href="./Sva.html" target=&ldquo;blank&rdquo;>Safe-sec-visor Architecture for Cyber-Physical Systems</a></h2>
-<h3>Make AI trustworthy in CPS through sandboxing </h3>
-<p><br />
-In this project, we propose a Safe-sec-visor Architecture for sandboxing arbitary types of unverified controllers (e.g., AI-based controllers) to provide a system-level safety and security guarantees for Cyber-Physical Systems.</p>
 </div></div>
-<div id="text-img-container"><div id="img-container">
-<img src="./image/SbC_Concept.jpg" alt="" width="300px" /></div>
-<div id="text-container"><h2><a href="./SbC.html" target=&ldquo;blank&rdquo;>Secure-by-construction Controller Synthesis</a></h2>
-<h3>Constructing safe and secure Cyber-Physical Systems</h3>
-<p><br />
-In this project, we focus on provably-correct synthesis scheme for building controllers that ensure safety and security properties over Cyber-Physical Systems simultaneously.</p>
+<div class="infoblock">
+<div class="blockcontent">
+<p><b>Teaching assistant</b>:</p>
+<ul>
+<li><p>Advanced Seminar on Safe Cyber-Physical Systems (<a href="https://campus.tum.de/tumonline/pl/ui/$ctx;design=pl;header=max;lang=en/wbLv.wbShowLVDetail?pStpSpNr=950605169" target=&ldquo;blank&rdquo;>MW2400</a>), Technical University of Munich, Germany, since Summer Semester 2019</p>
+</li>
+</ul>
+<ul>
+<li><p>Development of Intelligent Distributed Embedded Systems in Mechatronics - Laboratory
+(<a href="http://www.ais.mw.tum.de/en/teaching/practical-courses/entwicklung-intelligenter-systeme" target=&ldquo;blank&rdquo;>MW1982</a>), Technical University of Munich, Germany, from Winter Semester 2017/2018 to Winter Semester 2018/2019</p>
+</li>
+</ul>
 </div></div>
-<div id="text-img-container"><div id="img-container">
-<img src="./image/correctbyconstruction.png" alt="" width="300px" /></div>
-<div id="text-container"><h2><a href="./MDBSys.html" target=&ldquo;blank&rdquo;>Model-based Controller Synthesis</a></h2>
-<h3>Towards correct-by-construction embedded controllers</h3>
-<p><br />
-In this project, we investigate both abstraction-based and abstraction-free approaches for synthesizing correct-by-construction controllers against high-level logical properties, such as \(\omega\)-regular properties, over systems with continuous state and input sets.</p>
+<div class="infoblock">
+<div class="blockcontent">
+<p><b>Supervision of Master Thesis</b>:</p>
+<ul>
+<li><p>Jun You: <i>Environmental-aware Control Architecture for Safety-critical Cyber-physical Systems - A Case Study for Quadrotor via Digital Twin</i>, Summer Semester 2023</p>
+</li>
+<li><p>Jiaqi Cao: <i>Learning from Demonstrations Using Signal Temporal Logics with Quantitative Interval Semantics</i>, Summer Semester 2022</p>
+</li>
+<li><p>Richard Nai: <i>State Feedback Control of Fixed Wing Unmanned Aerial Vehicles using Mixing Controller Models with Safety Guarantees</i>,  Winter Semester 2021/2022</p>
+</li>
+<li><p>Xingcheng Chen: <i>Real-time Computation of Safety Envelope for Linear Parameter Varying Systems</i>, Winter Semester 2020/2021</p>
+</li>
+</ul>
 </div></div>
-<div id="text-img-container"><div id="img-container">
-<img src="./image/dt_cover.png" alt="" width="300px" /></div>
-<div id="text-container"><h2><a href="./DATASys.html" target=&ldquo;blank&rdquo;>Data-driven Controller Synthesis</a></h2>
-<h3>Achieve formal safety guarantees from data</h3>
-<p><br />
-In this project, we investigate how to synthesize correct-by-construction controllers directly based on data collected from the black-box systems with continuous state and input sets.</p>
+<div class="infoblock">
+<div class="blockcontent">
+<p><b>Supervision of Bachelor Thesis, Semester Thesis, and Interdisciplinary Project</b>:</p>
+<ul>
+<li><p>Hanyu Wu: <i>Rapid Prototyping and Digital Twin of Unmanned Aerial Vehicles: A Case Study for Quadrotor Helicopters</i>, Summer Semester 2022</p>
+</li>
+<li><p>Yanpeng Li: <i>Simulation and Reinforcement Learning in Autonomous Vehicles: A Case Study of Platoon</i>, Winter Semester 2021/2022</p>
+</li>
+<li><p>Richard Nai: <i>Applying the Simplex Architecture to the uavAP Autopilot</i>, Summer Semester 2021</p>
+</li>
+<li><p>Jiaqi Cao: <i>RoMoTeS: A Toolbox for Robust Monitoring of Temporal Specifications in Cyber-Physical Systems</i>, Winter Semester 2020/2021</p>
+</li>
+<li><p>Xingcheng Chen: <i>Simplex Architecture for Cyber-physical Systems with Imprecise Model</i>,Summer Semester 2019</p>
+</li>
+</ul>
 </div></div>
 </div> <!-- <div id="layout-content"> -->
 <div id="footer-container">
