--- a/group.html
+++ b/group.html
@@ -213,6 +213,35 @@ Email: bingzhuoz(at)*</br>
 </p>
 </div>
 </div>
+<div id="member-container">
+<div id="member">
+<img src="image/member/QiZhenchao.jpg">
+</div>
+<div id="member-text2">
+<p>
+</br>
+<a href="./group.html" target="blank"> <b>齐振超 Zhenchao Qi</b></a> (S'26)</br>
+联合培养导师：<a href="https://facultyprofiles.hkust-gz.edu.cn/faculty-personal-page/SU-Zongxian/zongxiansu" target="blank"> 苏宗贤 教授</a> （Co-supervised by <a href="https://facultyprofiles.hkust-gz.edu.cn/faculty-personal-page/SU-Zongxian/zongxiansu" target="blank">Professor Zongxian Su</a>) </br>
+邮箱（email）:  zqi256(at)connect*</br>
+<b>研究主题 Research Topic</b></br>
+人工智能+海洋工程 AI + Ocean Engineering
+</p>
+</div>
+</div>
+<div id="member-container">
+<div id="member">
+<img src="image/member/WangChengchen.jpg">
+</div>
+<div id="member-text2">
+<p>
+<a href="./group.html" target="blank"> <b>王承宸 Chengchen Wang</b></a> (S'26)</br>
+联合培养导师：清华大学智能产业研究院 高超 博士（Co-supervised by Dr. Chao Gao） </br>
+邮箱（email）:  cgao256(at)connect*</br>
+<b>研究主题 Research Topic</b></br>
+具身智能学习平台构建
+</p>
+</div>
+</div>
 </p>
 <p>*hkust-gz.edu.cn</p>
 <h2>硕士研究生 Master Students</h2>
@@ -302,14 +331,6 @@ MPhil 2025</br>
 </p>
 </div> 
 <div id="member">
-<img src="image/member/RA/LiSifan.jpg">
-<p>
-<b>李思凡 Sifan Li</b></br>
-<b>研究主题</b></br>
-三维重构技术
-</p>
-</div> 
-<div id="member">
 <img src="image/member/RA/LuoHao.jpg">
 <p>
 <b>罗昊 Hao Luo</b></br>
@@ -323,6 +344,14 @@ MPhil 2025</br>
 <b>罗野 Ye Luo</b></br>
 <b>研究主题</b></br>
 人工智能 + 低空经济
+</p>
+</div> 
+<div id="member">
+<img src="image/member/RA/LiuJiaqi.jpg">
+<p>
+<b>刘嘉琦 Jiaqi Liu</b></br>
+<b>研究主题</b></br>
+具身智能
 </p>
 </div> 
 </div>  
@@ -471,7 +500,7 @@ MPhil 2025</br>
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Last edited  on December 25<sup>th</sup> 2025 . </br>
+Last edited  on January 2<sup>nd</sup> 2026 . </br>
 Powered by <a href="https://github.com/szl2/jemdoc-new-design" target="blank">jemdoc + new design</a>.
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
