--- a/Sva.html
+++ b/Sva.html
@@ -105,7 +105,7 @@ Therefore, the proposed architecture allows exploiting the functionalities of AI
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Last edited  on December 25<sup>th</sup> 2025 . </br>
+Last edited  on January 2<sup>nd</sup> 2026 . </br>
 Powered by <a href="https://github.com/szl2/jemdoc-new-design" target="blank">jemdoc + new design</a>.
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
