--- a/DATASys.html
+++ b/DATASys.html
@@ -95,7 +95,7 @@ In particular, we are interested in so-called <i>direct data-driven approaches</
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Last edited  on January 2<sup>nd</sup> 2026 . </br>
+Last edited  on January 10<sup>th</sup> 2026 . </br>
 Powered by <a href="https://github.com/szl2/jemdoc-new-design" target="blank">jemdoc + new design</a>.
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
