--- a/index_Chinese.html
+++ b/index_Chinese.html
@@ -73,7 +73,7 @@ MathJax.Hub.Config({
 <img src="./image/bingzhuo_new.jpg" alt="Bingzhuo Zhong" width="150px" height="225px" /></div>
 <div id="text-container"><h2><a href="https://personal.hkust-gz.edu.cn/zhongbingzhuo/index_Chinese.html" target=&ldquo;blank&rdquo;>钟秉灼</a>， 理学博士(Dr. rer. nat)<br /><br /></h2>
 <p>香港科技大学（广州）信息枢纽人工智能学域和系统枢纽智能交通学域联聘助理教授，副研究员，博士生导师。
-入选国家级高层次人才计划（海外），广东省“珠江人才计划” （青年拔尖人才），广东省科学技术协会青年科技人才培育计划。<br /><br />
+入选国家级高层次青年人才计划（海外），广东省“珠江人才计划” （青年拔尖人才），广东省科学技术协会青年科技人才培育计划。<br /><br />
 </p>
 <h3>办公室: W4(C8) L3 305</h3>
 <h3>邮箱: bingzhuoz(at)hkust-gz(dot)edu(dot)cn<br /></h3>
@@ -85,7 +85,7 @@ MathJax.Hub.Config({
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Last edited  on December 25<sup>th</sup> 2025 . </br>
+Last edited  on January 10<sup>th</sup> 2026 . </br>
 Powered by <a href="https://github.com/szl2/jemdoc-new-design" target="blank">jemdoc + new design</a>.
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
